--- a/resources/css/layouts/header.scss
+++ b/resources/css/layouts/header.scss
@@ -17,27 +17,57 @@
   &__menu-btn,
   &__map-btn {
     width: 2rem;
-    height: 2rem;
+    height: 1.7rem;
   }
 
   &__menu-btn {
-    >svg>path {
-      transition: all 0.3s linear;
+    span {
+      content: '';
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: 2px;
+      background: $colorMainBackground;
+      border-radius: 2px;
+      transition: all 0.2s ease;
+      pointer-events: none;
+
+      &:nth-child(1) {
+        top: 0;
+      }
+
+      &:nth-child(3) {
+        bottom: 0;
+      }
+    }
+  }
+
+  .active__animation {
+    >span {
+      &:nth-child(1) {
+        top: 50%;
+        transform: translateY(-50%);
+      }
+
+      &:nth-child(3) {
+        bottom: 50%;
+        transform: translateY(50%);
+      }
     }
   }
 
   .active__cross {
-    >svg>path {
+    >span {
       &:nth-child(2) {
         display: none;
       }
 
       &:nth-child(1) {
-        transform: rotate(45deg) translateY(-1px) translateX(1px);
+        transform: translateY(-50%) rotate(45deg);
       }
 
       &:nth-child(3) {
-        transform: rotate(-45deg) translateY(-3px) translateX(-9px);
+        transform: translateY(50%) rotate(-45deg);
       }
     }
   }
@@ -161,7 +191,7 @@
     border-bottom: 1px solid $color_4;
     border-left: 1px solid $color_4;
     background-color: $colorWhite;
-    transform: translateX(50%) rotate(135deg) ;
+    transform: translateX(50%) rotate(135deg);
   }
 
   &.hidden {
@@ -190,5 +220,3 @@
     white-space: nowrap;
   }
 }
-
-
