--- a/resources/css/layouts/header.scss
+++ b/resources/css/layouts/header.scss
@@ -7,6 +7,7 @@
   &__top {
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
+    padding-right: 6rem;
 
     @media only screen and (max-width: $pointMD) {
       padding-left: 4rem;
