--- a/resources/css/layouts/similar-compny-card.scss
+++ b/resources/css/layouts/similar-compny-card.scss
@@ -1,6 +1,7 @@
 @import '../variables.scss';
 
 .similar-company-card {
+  height: 100%;
   display: flex;
   justify-content: center;
   align-content: center;
