--- a/resources/css/layouts/footer.scss
+++ b/resources/css/layouts/footer.scss
@@ -94,9 +94,10 @@
     transform: translate(-300%, -50%) rotate(-180deg);
 
     @media only screen and (max-width: $pointMD) {
-      top: auto;
+      top: unset;
       left: 0;
       bottom: 0;
+      margin-bottom: 0;
       transform: translate(0) rotate(-180deg);
     }
   }
