--- a/resources/css/layouts/hero.scss
+++ b/resources/css/layouts/hero.scss
@@ -49,12 +49,9 @@
     overflow: hidden;
     transition: height 0.5s;
 
-    @media only screen and (max-width: $pointMD) {
-      height: 2.4rem;
-    }
-
-    &.active {
+    &[data-expand-start-height] {
       height: min-content;
+      // padding-top: 3rem;
       padding-bottom: 3rem;
     }
   }
@@ -72,6 +69,7 @@
     @media only screen and (max-width: $pointMD) {
       bottom: 0;
       left: 50%;
+      margin-bottom: 0;
       transform: translate(-50%);
     }
   }
@@ -91,7 +89,7 @@
       height: 0rem;
       overflow: hidden;
 
-      .active & {
+      [data-expand-start-height] & {
         height: fit-content;
       }
     }
