modal window update

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -1,11 +1,14 @@
 @import "../vendors/normalize.min.css";
 @import "/resources/js/plugins/chooser/chooser.css";
+@import "/resources/js/plugins/modal/style.css";
 
 @import "./fonts.scss";
 @import "./variables.scss";
 @import "./reset.scss";
 @import "./utility.scss";
 @import "./global.scss";
+
+@import "./layouts/site-message.scss";
 
 @import "./layouts/header.scss";
 @import "./layouts/footer.scss";
