--- a/resources/css/pages/shop.scss
+++ b/resources/css/pages/shop.scss
@@ -3,6 +3,7 @@
 @import "../components/display-rating.scss";
 @import "../components/accordion.scss";
 @import "../layouts/crousel.scss";
+@import "../layouts/info-rating.scss";
 @import "../layouts/hours.scss";
 @import "../layouts/brands-list.scss";
 @import "../layouts/tabs.scss";
@@ -204,37 +205,6 @@
       background-size: contain;
       background-repeat: no-repeat;
     }
-  }
-}
-
-.info-rating {
-  margin-bottom: 2.6rem;
-
-  &__table {
-    width: 100%;
-
-    th,
-    td {
-      padding-top: 1.4rem;
-      padding-bottom: 1.4rem;
-    }
-
-    th {
-      width: 80%;
-    }
-
-    & tr:not(:first-of-type) th,
-    & tr:not(:first-of-type) td {
-      border-top: 1px solid $colorGrey;
-    }
-  }
-
-  &__logo {
-    text-align: left;
-  }
-
-  &__count {
-    margin-right: 0.5rem;
   }
 }
 
