--- a/layout_src_build/css/style.css
+++ b/layout_src_build/css/style.css
@@ -2138,7 +2138,7 @@ main {
 }
 .accordion__categories__into{
   display: block !important;
-  margin-left: auto !important; 
+  margin-left: auto !important;
   background: none !important;
   margin-right: 0 !important;
   cursor: pointer;
@@ -2344,43 +2344,43 @@ main {
   transform: translateY(-50%) rotate(-180deg);
 }
 
-.testimonials-section {
+.feedback-section {
   padding-top: 6rem;
   padding-bottom: 5.5rem;
   background-color: #ffffff;
 }
 
-.testimonials__inner {
+.feedback__inner {
   position: relative;
   padding-right: 50%;
 }
 
-.testimonials__heading-box {
+.feedback__heading-box {
   margin-bottom: 3.4rem;
   display: flex;
   align-items: center;
 }
 
-.testimonials__heading {
+.feedback__heading {
   margin-right: 2rem;
   font-size: 3.7rem;
   line-height: 1.4rem;
   font-weight: 600;
 }
 
-.testimonials__main-rating {
+.feedback__main-rating {
   display: flex;
   align-items: center;
 }
 
-.testimonials__main-num {
+.feedback__main-num {
   margin-right: 1rem;
   font-size: 3.6rem;
   line-height: 1.4rem;
   font-weight: 600;
 }
 
-.testimonials__text {
+.feedback__text {
   margin-bottom: 7rem;
   padding-right: 2rem;
   font-size: 2rem;
@@ -2388,7 +2388,7 @@ main {
   font-weight: 400;
 }
 
-.testimonials__number {
+.feedback__number {
   min-height: 2.8rem;
   padding: 0.7rem 1.5rem;
   font-size: 1.6rem;
@@ -2397,26 +2397,26 @@ main {
   background-color: var(--color-primary);
 }
 
-.testimonials__tab-header {
+.feedback__tab-header {
   margin-bottom: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.testimonials__tab-select .itc-select__toggle {
+.feedback__tab-select .itc-select__toggle {
   background-color: #f6f6f6;
 }
 
-.testimonials__tab-select .itc-select__toggle,
-.testimonials__tab-select .itc-select__option {
+.feedback__tab-select .itc-select__toggle,
+.feedback__tab-select .itc-select__option {
   color: #25313a;
   font-size: 1.3rem;
   font-weight: 600;
 }
 
-.testimonials__tab-link:link,
-.testimonials__tab-link:visited {
+.feedback__tab-link:link,
+.feedback__tab-link:visited {
   font-family: "Inter", sans-serif;
   font-size: 1.3rem;
   line-height: 1;
@@ -2424,27 +2424,27 @@ main {
   color: #7d8797;
 }
 
-.testimonials__tab-body-container {
+.feedback__tab-body-container {
   max-height: 52rem;
   overflow-y: scroll;
 }
 
-.testimonials__tab-body-container>*+* {
+.feedback__tab-body-container>*+* {
   margin-top: 1rem;
 }
 
-.testimonials__tab-item {
+.feedback__tab-item {
   padding: 2rem;
   border: 1px solid var(--grey);
 }
 
-.testimonials__tab-item--header {
+.feedback__tab-item--header {
   margin-bottom: 1.5rem;
   display: flex;
   align-items: center;
 }
 
-.testimonials__tab-item--photo {
+.feedback__tab-item--photo {
   --el-size: 5rem;
   width: var(--el-size);
   height: var(--el-size);
@@ -2453,13 +2453,13 @@ main {
   overflow: hidden;
 }
 
-.testimonials__tab-item--photo img {
+.feedback__tab-item--photo img {
   height: 100%;
   width: auto;
   object-fit: cover;
 }
 
-.testimonials__tab-item--user-info {
+.feedback__tab-item--user-info {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -2467,23 +2467,23 @@ main {
   line-height: 2rem;
 }
 
-.testimonials__tab-item--user-name {
+.feedback__tab-item--user-name {
   font-size: 1.5rem;
 }
 
-.testimonials__tab-item--testimonial-date {
+.feedback__tab-item--testimonial-date {
   font-size: 1.3rem;
   color: #7d8797;
 }
 
-.testimonials__tab-item--text {
+.feedback__tab-item--text {
   margin-bottom: 1.5rem;
   font-size: 1.5rem;
   line-height: 1.8rem;
   font-weight: 400;
 }
 
-.testimonials__tab-item--reply-date {
+.feedback__tab-item--reply-date {
   margin-bottom: 0.5rem;
   height: 2rem;
   font-size: 1.3rem;
@@ -2493,7 +2493,7 @@ main {
   color: #7d8797;
 }
 
-.testimonials__tab-item--reply-date::before {
+.feedback__tab-item--reply-date::before {
   --size: 2rem;
   content: "";
   position: absolute;
@@ -2507,7 +2507,7 @@ main {
   background-position: 50%;
 }
 
-.testimonials__tab-item--reply-text {
+.feedback__tab-item--reply-text {
   font-size: 1.3rem;
   line-height: 1.8rem;
   font-weight: 400;
@@ -3009,22 +3009,22 @@ main {
     margin-left: 2rem;
   }
 
-  .testimonials-section {
+  .feedback-section {
     padding: 0;
     min-height: auto;
   }
 
-  .testimonials__inner {
+  .feedback__inner {
     padding: 0;
   }
 
-  .testimonials__heading-box {
+  .feedback__heading-box {
     position: relative;
     margin-block: 3.3rem;
     z-index: 2;
   }
 
-  .testimonials__heading-box::after {
+  .feedback__heading-box::after {
     content: "";
     position: absolute;
     top: -3.3rem;
@@ -3035,32 +3035,32 @@ main {
     z-index: -1;
   }
 
-  .testimonials__heading {
+  .feedback__heading {
     font-size: 3rem;
     line-height: 1.4rem;
   }
 
-  .testimonials__main-rating {
+  .feedback__main-rating {
     display: none;
   }
 
-  .testimonials__text {
+  .feedback__text {
     display: none;
   }
 
-  .testimonials__tab-select {
+  .feedback__tab-select {
     width: 50%;
   }
 
-  .testimonials__tab-select .itc-select {
+  .feedback__tab-select .itc-select {
     min-width: 15.4rem;
   }
 
-  .testimonials__tab-select .itc-select__toggle {
+  .feedback__tab-select .itc-select__toggle {
     padding: 1.3rem 3.8rem 1.3rem 1.5rem;
   }
 
-  .testimonials__link {
+  .feedback__link {
     display: none;
   }
 
@@ -3091,7 +3091,7 @@ main {
     max-height: 3.2rem;
   }
 
-  .testimonials-acordion__info-box {
+  .feedback-acordion__info-box {
     width: 100%;
     display: flex;
     justify-content: space-between;
