--- a/resources/styles/pages/home/layouts/shop-card.scss
+++ b/resources/styles/pages/home/layouts/shop-card.scss
@@ -1,4 +1,4 @@
-@import "../components/display-rating.scss";
+@import "../../../components/display-rating.scss";
 
 .shop-card {
   box-sizing: border-box;
@@ -16,18 +16,6 @@
     flex-direction: column;
     border-width: 1px;
   }
-
-  // &.active::after {
-  //   content: '';
-  //   position: absolute;
-  //   top: 0;
-  //   right: 0;
-  //   height: 100%;
-  //   width: 10px;
-  //   background-color: $colorSecondary;
-  //   border-top-left-radius: 10px;
-  //   border-bottom-left-radius: 10px;
-  // }
 
   &:not(:first-of-type) {
     margin-top: 1rem;
