--- a/resources/styles/layouts/menu.scss
+++ b/resources/styles/layouts/menu.scss
@@ -1,154 +1,162 @@
 @import "./categories-list.scss";
 
- .menu {
-   height: 100vh;
-   width: 100%;
-   background: $colorSecondaryBackground;
-   position: absolute;
-   top: $mainSectionPaddingXXL;
-   transition: all 0.5s;
-   z-index: 122;
-   left: 50%;
-   transform: translateX(-50%);
-   visibility: hidden;
-   pointer-events: none;
-   opacity: 0;
+.menu {
+  height: 100vh;
+  width: 100%;
+  background: $colorSecondaryBackground;
+  position: absolute;
+  top: $mainSectionPaddingXXL;
+  transition: all 0.5s;
+  z-index: 122;
+  left: 50%;
+  transform: translateX(-50%);
+  visibility: hidden;
+  pointer-events: none;
+  opacity: 0;
 
-   @media only screen and (max-width: $pointMD) {
-     top: $mainSectionPaddingMD;
-   }
+  @media only screen and (max-width: $pointMD) {
+    top: $mainSectionPaddingMD;
+  }
 
-   &__inner {
-     height: 100%;
-     padding-bottom: 2rem;
-     display: flex;
-     justify-content: space-between;
+  &__inner {
+    height: 100%;
+    padding-bottom: 2rem;
+    display: flex;
+    justify-content: space-between;
 
-     >*+* {
-       margin-left: 2.5rem;
-     }
+    >*+* {
+      margin-left: 2.5rem;
+    }
 
-     @media only screen and (max-width: $pointMD) {
-       flex-direction: column;
-       max-width: 100%;
-       max-height: 75.5dvh;
-       overflow-y: scroll;
-     }
-   }
-
-
-   &__categories-wrapper {
-     background-color: $colorWhite;
-     flex: 1;
-     padding: 3.2rem 2.5rem;
-     width: 50%;
-     height: 100%;
-
-     & .categories-list {
-       flex-wrap: wrap;
-       height: 53.5rem;
-     }
-
-     & li {
-       width: 50%;
-     }
-
-     & li:nth-child(10n) {
-       margin-top: 0;
-     }
-
-     @media only screen and (max-width: $pointMD) {
-       display: none;
-     }
-
-   }
-
-   &__title {
-     font-size: 2.7rem;
-     font-weight: 600;
-   }
+    @media only screen and (max-width: $pointMD) {
+      flex-direction: column;
+      max-width: 100%;
+      max-height: 75.5dvh;
+      overflow-y: scroll;
+    }
+  }
 
 
-   /* LIST OF REGIONS */
-   &__regions-wrapper {
-     padding-top: 3.2rem;
-     padding-left: 1.4rem;
-     width: 25%;
-   }
+  &__categories-wrapper {
+    background-color: $colorWhite;
+    flex: 1;
+    padding: 3.2rem 2.5rem;
+    width: 50%;
+    height: 100%;
 
-   .regions-list {
+    & .categories-list {
+      flex-wrap: wrap;
+      height: 53.5rem;
+    }
 
-     a:link,
-     a:visited {
-       font-size: 1.5rem;
-       font-weight: 500;
-       color: inherit;
-     }
+    & li {
+      width: 50%;
+    }
 
-     >*+* {
-       margin-top: 2.8rem;
-     }
-   }
+    & li:nth-child(10n) {
+      margin-top: 0;
+    }
 
-   /* PROMOS LIST */
-   &__promos {
-     width: 25%;
+    @media only screen and (max-width: $pointMD) {
+      display: none;
+    }
 
-     @media only screen and (max-width: $pointMD) {
-       display: none;
-     }
+  }
 
-     >*+* {
-       margin-top: 2.5rem;
-     }
-
-     li {
-       max-width: 31rem;
-       max-height: 14.6rem;
-     }
-
-     a:link,
-     a:visited {
-       display: block;
-       width: 100%;
-       height: 100%;
-       overflow: hidden;
-     }
-
-     img {
-       object-fit: cover;
-       border: 1px solid $colorBlackOpacity;
-     }
-   }
+  &__title {
+    font-size: 2.7rem;
+    font-weight: 600;
+  }
 
 
-   &.active {
-     visibility: visible;
-     pointer-events: all;
-     opacity: 1;
+  /* LIST OF REGIONS */
+  &__regions-wrapper {
+    padding-top: 3.2rem;
+    padding-left: 1.4rem;
+    width: 25%;
+  }
 
-     @media only screen and (max-width: $pointMD) {
-       display: block;
-     }
-   }
- }
+  .regions-list {
 
- .search {
-   &--menu {
-     width: 100%;
-     margin: 0;
-     display: none;
+    a:link,
+    a:visited {
+      font-size: 1.5rem;
+      font-weight: 500;
+      color: inherit;
+    }
 
-     & .categories-list {
-       padding-inline: 2rem;
-     }
+    >*+* {
+      margin-top: 2.8rem;
+    }
+  }
 
-     & .categories-list>li:last-child {
-       padding-bottom: 0;
-     }
+  /* PROMOS LIST */
+  &__promos {
+    width: 25%;
 
-     @media only screen and (max-width: $pointMD) {
-       display: block;
-     }
-   }
- }
+    @media only screen and (max-width: $pointMD) {
+      display: none;
+    }
+
+    >*+* {
+      margin-top: 2.5rem;
+    }
+
+    li {
+      max-width: 31rem;
+      max-height: 14.6rem;
+    }
+
+    a:link,
+    a:visited {
+      display: block;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+
+    img {
+      object-fit: cover;
+      border: 1px solid $colorBlackOpacity;
+    }
+  }
+
+
+  &.active {
+    visibility: visible;
+    pointer-events: all;
+    opacity: 1;
+
+    @media only screen and (max-width: $pointMD) {
+      display: block;
+    }
+  }
+}
+
+.search {
+  &--menu {
+    width: 100%;
+    margin: 0;
+    display: none;
+
+    & .categories-list {
+      padding-inline: 2rem;
+    }
+
+    & .categories-list>li:last-child {
+      padding-bottom: 0;
+    }
+
+    @media only screen and (max-width: $pointMD) {
+      display: block;
+    }
+  }
+}
+
+.menu-disable-scroll {
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
