--- a/resources/styles/layouts/photos-carousel.scss
+++ b/resources/styles/layouts/photos-carousel.scss
@@ -77,8 +77,9 @@
 		}
 
 		img {
-			max-height: 100vh;
-			margin: auto;
+			max-width: 100%;
+			max-height: 100%;
+			object-fit: contain;
 		}
 	}
 }
