--- a/resources/styles/pages/shop/index.scss
+++ b/resources/styles/pages/shop/index.scss
@@ -13,6 +13,7 @@
 @import "../../layouts/photos-carousel.scss";
 @import "./layouts/heading.scss";
 @import "./layouts/info.scss";
+@import "./layouts/sell.scss";
 @import "./layouts/feedback.scss";
 
 
