--- a/resources/styles/components/button.scss
+++ b/resources/styles/components/button.scss
@@ -40,6 +40,11 @@
     justify-content: center;
     align-items: center;
 
+    @media only screen and (max-width: $pointMD) {
+      width: 2rem;
+      height: 2rem;
+    }
+
     &::before,
     &::after {
       content: '';
