--- a/resources/styles/layouts/categories-list.scss
+++ b/resources/styles/layouts/categories-list.scss
@@ -52,7 +52,7 @@
 
   .brands__container {
     padding: 5.8rem 6.5rem 4.8rem 6.5rem;
-    background-color: $colorGreyLight;
+    background-color: $colorSecondaryBackground;
   }
 
   .brands__content.expanded .accordion--brands {
