--- a/resources/styles/layouts/site-message.scss
+++ b/resources/styles/layouts/site-message.scss
@@ -35,9 +35,7 @@
 		&:active {
 
 			&::after,
-			&::before {
-				// background-color: var(--bs-link-hover-color);
-			}
+			&::before {}
 		}
 	}
 
