--- a/resources/styles/layouts/crousel.scss
+++ b/resources/styles/layouts/crousel.scss
@@ -1,4 +1,4 @@
-.carousel {
+.carousel-preview {
   position: relative;
   padding: 0 3.5rem;
 
@@ -7,8 +7,8 @@
     pointer-events: none;
   }
 
-  .previous,
-  .forwards {
+  &-prev,
+  &-next {
     @media only screen and (max-width: $pointXS) {
       height: 100%;
       padding: 0 0.6rem;
@@ -17,16 +17,121 @@
 
   }
 
-  .forwards {
+  &-next {
     right: 10%;
+
     @media only screen and (max-width: $pointXS) {
       right: 0;
     }
   }
-  .previous{
+
+  &-prev {
     left: 10%;
+
     @media only screen and (max-width: $pointXS) {
       left: 0;
+    }
+  }
+}
+
+.swiper-slide--carousel-preview {
+  cursor: pointer;
+}
+
+.carousel-photos {
+  max-width: 1000px;
+
+  @media only screen and (max-width: $pointXL) {
+    max-width: 80vw;
+  }
+
+  @media only screen and (max-width: $pointMD) {
+    &.modal-window__container {
+      display: flex !important;
+    }
+
+    max-width: unset;
+    padding: 0;
+    align-items: center;
+    align-content: center;
+  }
+
+  &__close {
+    position: absolute;
+    top: 0;
+    right: -2rem;
+
+    @media only screen and (max-width: $pointMD) {
+      $position: 3rem;
+      top: $position;
+      right: $position;
+      padding: 1.5rem;
+      border-radius: 100%;
+      background-color: $colorLight;
+      z-index: 10;
+
+      &::after,
+      &::before {
+        width: 70%;
+        background-color: $colorMainBackground;
+      }
+    }
+  }
+
+  $xlPosition: -5rem;
+
+  &-prev {
+    left: $xlPosition;
+  }
+
+  &-next {
+    right: $xlPosition;
+  }
+
+  @media only screen and (max-width: $pointMD) {
+    $mdPosition: 1rem;
+
+    &-prev {
+      left: $mdPosition;
+    }
+
+    &-next {
+      right: $mdPosition;
+    }
+  }
+
+}
+
+.carousel-photos-pagination {
+  >.swiper-pagination-bullet-active {
+    background: $colorPrimary;
+  }
+
+  &.swiper-pagination.swiper-pagination-bullets {
+    @media only screen and (max-width: $pointMD) {
+      left: 50%;
+      width: fit-content;
+      padding: 0.5rem;
+      border-radius: 5px;
+      background-color: $colorLight;
+      transform: translateX(-50%);
+    }
+  }
+}
+
+.swiper-slide--carousel-photos {
+  @media only screen and (max-width: $pointMD) {
+    &.swiper-slide {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      align-content: center;
+    }
+
+    img {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
     }
   }
 }
@@ -37,5 +142,3 @@
     pointer-events: none;
   }
 }
-
-
