--- a/resources/styles/layouts/menu.scss
+++ b/resources/styles/layouts/menu.scss
@@ -1,4 +1,5 @@
 @import "./categories-list.scss";
+@import "./search-category.scss";
 
 .menu {
   height: 100vh;
@@ -133,8 +134,8 @@
   }
 }
 
-.search {
-  &--menu {
+.search-category {
+  &--menu.search-category {
     width: 100%;
     margin: 0;
     display: none;
