--- a/resources/styles/mixins.scss
+++ b/resources/styles/mixins.scss
@@ -1,12 +1,11 @@
 @mixin hidden {
-  position: absolute;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
 }
 
-@mixin visible($position: static) {
-  position: $position;
+@mixin visible() {
   opacity: 1;
   visibility: visible;
   pointer-events: all;
