--- a/resources/styles/pages/shop/index.scss
+++ b/resources/styles/pages/shop/index.scss
@@ -5,7 +5,8 @@
 @import "../../layouts/crousel.scss";
 @import "../../layouts/info-rating.scss";
 @import "../../layouts/hours.scss";
-@import "../../layouts/brands-list.scss";
+@import "../../layouts/categories-list/default.scss";
+@import "../../layouts/categories-list/grid.scss";
 @import "../../layouts/tabs.scss";
 @import "../../layouts/comments-list.scss";
 @import "../../layouts/similar-companies.scss";
@@ -18,46 +19,6 @@
 
 .swiper-slide--carousel {
   cursor: pointer;
-}
-
-
-.accordion {
-  &--sell {
-    background-color: $colorWhite;
-  }
-}
-
-.brands-list {
-  &--sell,
-  &--point {
-    position: absolute;
-    padding-bottom: 4rem;
-    background-color: $colorWhite;
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-
-    @media only screen and (max-width: $pointMD) {
-      padding-bottom: 3rem;
-      gap: 1.8rem;
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    @media only screen and (max-width: $pointS) {
-      grid-template-columns: repeat(1, 1fr);
-    }
-
-    &.open {
-      position: relative;
-      opacity: 1;
-      visibility: visible;
-      pointer-events: all;
-    }
-  }
-
-  &__item--sell {
-    cursor: pointer;
-  }
 }
 
 .footer {
