--- a/resources/styles/pages/shop/index.scss
+++ b/resources/styles/pages/shop/index.scss
@@ -7,7 +7,7 @@
 @import "../../layouts/hours.scss";
 @import "../../layouts/categories-list/default.scss";
 @import "../../layouts/categories-list/grid.scss";
-@import "../../layouts/tabs.scss";
+@import "../../components/tabs.scss";
 @import "../../layouts/comments-list.scss";
 @import "../../layouts/similar-companies.scss";
 @import "../../layouts/similar-categories-and-location.scss";
@@ -16,13 +16,3 @@
 @import "./layouts/sell.scss";
 @import "./layouts/feedback.scss";
 
-
-.swiper-slide--carousel {
-  cursor: pointer;
-}
-
-.footer {
-  @media only screen and (max-width: $pointMD) {
-    padding-bottom: 3.8rem;
-  }
-}
