--- a/resources/styles/layouts/search/categories.scss
+++ b/resources/styles/layouts/search/categories.scss
@@ -6,13 +6,13 @@
     box-shadow: 0 5px 50px $colorBlackOpacity;
   }
 
-  &__form--categories {
+  &--categories &__form {
     width: 100%;
     background: $colorWhite;
     border-bottom: 1px solid $colorGrey;
   }
 
-  &__action--categories {
+  &--categories &__action {
     width: 100%;
     padding: 2rem;
     display: flex;
@@ -20,7 +20,7 @@
     z-index: 3;
   }
 
-  &__btn--categories {
+  &--categories &__btn {
     width: 45%;
     padding: 1.5rem 0;
     font-size: 1.5rem;
@@ -28,12 +28,12 @@
     color: $colorMainBackground;
   }
 
-  &__btn--categories.search__btn--selection span {
+  &--categories &__btn--selection span {
     position: relative;
     padding-left: 2.8rem;
   }
 
-  &__btn--categories.search__btn--selection span::before {
+  &--categories &__btn--selection span::before {
     content: "";
     position: absolute;
     top: 50%;
@@ -46,7 +46,7 @@
     background-repeat: no-repeat;
   }
 
-  &__btn--categories.search__btn--clear {
+  &--categories &__btn--clear {
     background-color: $colorSecondaryBackground;
   }
 }
