--- a/resources/styles/pages/home/index.scss
+++ b/resources/styles/pages/home/index.scss
@@ -1,5 +1,15 @@
 @import "../../variables.scss";
+@import "../../layouts/header.scss";
+@import "../../layouts/categories-list/default.scss";
+@import "../../layouts/menu.scss";
+@import "../../layouts/search/default.scss";
+@import "../../layouts/search/categories.scss";
+@import "../../layouts/footer.scss";
 @import "../../layouts/aside.scss";
+@import "../../layouts/categories-list/form.scss";
+@import "../../components/display-rating.scss";
+@import '../../layouts/similar-categories.scss';
+@import '../../layouts/similar-location.scss';
 @import "../../layouts/similar-categories-and-location.scss";
 @import "./layouts/hero.scss";
 @import "./layouts/filter.scss";
