--- a/resources/styles/pages/shop/index.scss
+++ b/resources/styles/pages/shop/index.scss
@@ -1,15 +1,23 @@
 @import "../../variables.scss";
-@import "../../mixins.scss";
+@import "../../layouts/header.scss";
+@import "../../layouts/categories-list/default.scss";
+@import "../../layouts/menu.scss";
+@import "../../layouts/search/default.scss";
+@import "../../layouts/search/categories.scss";
+@import "../../layouts/footer.scss";
 @import "../../components/display-rating.scss";
 @import "../../components/accordion.scss";
 @import "../../layouts/crousel.scss";
 @import "../../layouts/info-rating.scss";
 @import "../../layouts/hours.scss";
-@import "../../layouts/categories-list/default.scss";
 @import "../../layouts/categories-list/grid.scss";
 @import "../../components/tabs.scss";
 @import "../../layouts/comments-list.scss";
+@import "../../layouts/comment.scss";
 @import "../../layouts/similar-companies.scss";
+@import "../../layouts/similar-company-card.scss";
+@import '../../layouts/similar-categories.scss';
+@import '../../layouts/similar-location.scss';
 @import "../../layouts/similar-categories-and-location.scss";
 @import "./layouts/heading.scss";
 @import "./layouts/info.scss";
