--- a/resources/styles/layouts/aside.scss
+++ b/resources/styles/layouts/aside.scss
@@ -29,11 +29,11 @@
   }
 
 
-  .active &--collapsed {
+  .active &__collapsed {
     display: none;
   }
 
-  .active &--expanded {
+  .active &__expanded {
     display: block;
 
     @media only screen and (max-width: $pointMD) {
@@ -76,8 +76,8 @@
     }
   }
 
-  &--collapsed,
-  &--expanded {
+  &__collapsed,
+  &__expanded {
     width: 100%;
     height: 100%;
     display: flex;
@@ -85,11 +85,11 @@
     align-items: center;
   }
 
-  &--collapsed {
+  &__collapsed {
     justify-content: space-around;
   }
 
-  &--expanded {
+  &__expanded {
     position: relative;
     padding: 2rem;
     justify-content: flex-start;
