--- a/resources/styles/variables.scss
+++ b/resources/styles/variables.scss
@@ -8,7 +8,7 @@ $colorBlackHardOpacity: rgba(0, 0, 0, 0.05);
 $colorMainBackground: #25313a;
 $colorSecondaryBackground: $colorGreyLight;
 $colorPrimary: #b4e040;
-$colorDarkPrimary: #a2d222;
+$colorDarkPrimary: #8ca93e;
 $colorSecondary: #3d39fc;
 
 $color_1: #e1f5fe;
