--- a/resources/styles/pages/home/layouts/shop-list.scss
+++ b/resources/styles/pages/home/layouts/shop-list.scss
@@ -6,10 +6,14 @@
   transition: height 0.5s;
   overflow-y: auto;
 
+  & > li + li {
+    margin-top: 2rem;
+  }
+
   @media only screen and (max-width: $pointMD) {
     height: 119.5rem;
     padding-bottom: 5rem;
-    overflow-y: hidden;
+    // overflow-y: hidden;
 
     &.expanded {
       height: max-content;
