--- a/resources/styles/pages/home/layouts/shop-list.scss
+++ b/resources/styles/pages/home/layouts/shop-list.scss
@@ -6,18 +6,14 @@
   transition: height 0.5s;
   overflow-y: auto;
 
-  & > li + li {
+  &>li+li {
     margin-top: 2rem;
   }
 
   @media only screen and (max-width: $pointMD) {
-    height: 119.5rem;
+    height: max-content;
     padding-bottom: 5rem;
-    // overflow-y: hidden;
-
-    &.expanded {
-      height: max-content;
-    }
+    overflow-y: unset;
   }
 
   &.active {
@@ -79,5 +75,3 @@
     }
   }
 }
-
-
