--- a/resources/styles/pages/home/index.scss
+++ b/resources/styles/pages/home/index.scss
@@ -18,7 +18,10 @@
 @import "./layouts/mobile-nav.scss";
 
 .main-content {
+  position: relative;
+  max-height: 100vh;
   padding-bottom: 9rem;
+  overflow-y: auto;
 }
 
 .filter {
