--- a/resources/styles/layouts/shop-card.scss
+++ b/resources/styles/layouts/shop-card.scss
@@ -12,7 +12,7 @@
 
   @media only screen and (max-width: $pointMD) {
     flex-direction: column;
-    border-width: 1px;
+    // border-width: 1px;
   }
 
   &:not(:first-of-type) {
