--- a/resources/styles/pages/home/index.scss
+++ b/resources/styles/pages/home/index.scss
@@ -11,10 +11,10 @@
 @import '../../layouts/similar-categories.scss';
 @import '../../layouts/similar-location.scss';
 @import "../../layouts/similar-categories-and-location.scss";
+@import "../../layouts/shop-list.scss";
+@import "../../layouts/shop-card.scss";
 @import "./layouts/hero.scss";
 @import "./layouts/filter.scss";
-@import "./layouts/shop-list.scss";
-@import "./layouts/shop-card.scss";
 @import "./layouts/mobile-nav.scss";
 
 .main-content {
