--- a/resources/styles/pages/home/layouts/filter.scss
+++ b/resources/styles/pages/home/layouts/filter.scss
@@ -25,18 +25,21 @@
     transition: all 0.5s;
 
     @media only screen and (max-width: $pointMD) {
-      position: absolute;
-      top: 7rem;
+      position: fixed;
+      top: -100vh;
       left: 0;
       width: 100%;
       height: calc(100vh - 19rem);
       margin: 0;
-      z-index: -1;
       box-shadow: 0 5px 50px $shadow;
+      opacity: 0;
+      pointer-events: none;
+      transition: top .3s ease-in-out, opacity .3s ease-in-out;
 
       .map-open & {
-        z-index: 1;
-        position: fixed;
+        top: 7rem;
+        opacity: 1;
+        pointer-events: all;
       }
     }
   }
