hero expand button styles fixed

--- a/resources/styles/pages/home/layouts/hero.scss
+++ b/resources/styles/pages/home/layouts/hero.scss
@@ -84,7 +84,12 @@
     width: 100vh;
     height: 100%;
     padding: 2rem 0;
+    display: none;
     background: $colorSecondaryBackground;
+
+    @media only screen and (max-width: $pointMD) {
+      display: block;
+    }
   }
 
   &__text {
