--- a/resources/styles/pages/home/index.scss
+++ b/resources/styles/pages/home/index.scss
@@ -17,12 +17,12 @@
 @import "./layouts/filter.scss";
 @import "./layouts/mobile-nav.scss";
 
-.main-content {
-  position: relative;
-  max-height: 100vh;
-  padding-bottom: 9rem;
-  overflow-y: auto;
-}
+// body {
+//   // position: relative;
+//   max-height: 100vh;
+//   padding-bottom: 9rem;
+//   overflow-y: auto;
+// }
 
 .filter {
   &__text-btn,
@@ -31,14 +31,15 @@
   }
 }
 
-.similar-categories-and-location {
-  display: none;
-}
+// .similar-categories-and-location {
+//   display: none;
+// }
 
 .footer {
   display: none;
 
   @media only screen and (max-width: $pointMD) {
     padding-bottom: 15.8rem;
+    display: block;
   }
 }
