--- a/resources/styles/pages/home/layouts/mobile-nav.scss
+++ b/resources/styles/pages/home/layouts/mobile-nav.scss
@@ -1,10 +1,11 @@
 .mobile-nav-section {
-  width: 100%;
-  height: 12rem;
   position: fixed;
   bottom: 0;
-  background-color: $colorMainBackground;
+  width: 100%;
+  height: 12rem;
   display: none;
+  background-color: $colorMainBackground;
+  z-index: 1;
 
   @media only screen and (max-width: $pointMD) {
     display: block;
